# rulechef

./: README.md  pyproject.toml  test.py
rulechef/: __init__.py  cli.py  coordinator.py  core.py  engine.py  learner.py  openai_wrapper.py
rulechef/examples/: __init__.py  basic.py
