[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulechef"
version = "0.1.0"
description = "Learn rule-based models from examples and LLM interactions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "RuleChef Contributors"},
]
keywords = ["rule-learning", "llm", "extraction", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/rulechef"
Repository = "https://github.com/anthropics/rulechef"

[project.scripts]
rulechef = "rulechef.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rulechef"]
